@@ -1,8 +1,10 @@
 package org.hyunggi.mygardenbe.dailyroutine.service;
 
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.hyunggi.mygardenbe.dailyroutine.domain.DailyRoutine;
 import org.hyunggi.mygardenbe.dailyroutine.domain.RoutineTime;
+import org.hyunggi.mygardenbe.dailyroutine.domain.RoutineType;
 import org.hyunggi.mygardenbe.dailyroutine.entity.DailyRoutineEntity;
 import org.hyunggi.mygardenbe.dailyroutine.repository.DailyRoutineRepository;
 import org.hyunggi.mygardenbe.dailyroutine.service.response.DailyRoutineResponse;
@@ -10,7 +12,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -19,13 +24,13 @@ public class DailyRoutineService {
     private final DailyRoutineRepository dailyRoutineRepository;
 
     @Transactional
-    public List<Long> postDailyRoutine(final List<RoutineTime> routineTimes, final String routineType, final String routineDescription) {
+    public List<Long> postDailyRoutine(final List<RoutineTime> routineTimes, final RoutineType routineType, final String routineDescription) {
         final List<DailyRoutine> dailyRoutines = convertDailyRoutines(routineTimes, routineType, routineDescription);
 
         return extractIds(dailyRoutineRepository.saveAll(DailyRoutineEntity.of(dailyRoutines)));
     }
 
-    private List<DailyRoutine> convertDailyRoutines(final List<RoutineTime> routineTimes, final String routineType, final String routineDescription) {
+    private List<DailyRoutine> convertDailyRoutines(final List<RoutineTime> routineTimes, final RoutineType routineType, final String routineDescription) {
         return routineTimes.stream()
                 .map(routineTime -> DailyRoutine.of(routineTime, routineType, routineDescription))
                 .toList();
@@ -39,25 +44,36 @@ public class DailyRoutineService {
 
     public List<DailyRoutineResponse> getDailyRoutine(final LocalDateTime startDateTime, final LocalDateTime endDateTime) {
         final List<DailyRoutineEntity> dailyRoutineEntities = dailyRoutineRepository.findAllByDateTimeBetween(startDateTime, endDateTime);
-        final List<DailyRoutine> dailyRoutines = convertDailyRoutines(dailyRoutineEntities);
+        final Map<Long, DailyRoutine> dailyRoutines = convertMapWithKeyAndDailyRoutine(dailyRoutineEntities);
 
         return convertDailyRoutineResponses(dailyRoutines);
     }
 
-    private List<DailyRoutine> convertDailyRoutines(final List<DailyRoutineEntity> dailyRoutineEntities) {
+    private Map<Long, DailyRoutine> convertMapWithKeyAndDailyRoutine(final List<DailyRoutineEntity> dailyRoutineEntities) {
         return dailyRoutineEntities.stream()
-                .map(DailyRoutineEntity::toDomain)
-                .toList();
+                .collect(Collectors.toMap(DailyRoutineEntity::getId, DailyRoutineEntity::toDomain));
     }
 
-    private List<DailyRoutineResponse> convertDailyRoutineResponses(final List<DailyRoutine> dailyRoutines) {
-        return dailyRoutines.stream()
-                .sorted(this::compareStartDateTime)
-                .map(DailyRoutineResponse::of)
-                .toList();
+    private List<DailyRoutineResponse> convertDailyRoutineResponses(final Map<Long, DailyRoutine> dailyRoutines) {
+        return dailyRoutines.entrySet().stream()
+                .map(entry -> DailyRoutineResponse.of(entry.getKey(), entry.getValue()))
+                .sorted(Comparator.comparing(DailyRoutineResponse::startDateTime))
+                .collect(Collectors.toList());
     }
 
-    private int compareStartDateTime(final DailyRoutine o1, final DailyRoutine o2) {
-        return o1.getStartDateTime().compareTo(o2.getStartDateTime());
+    @Transactional
+    public Long putDailyRoutine(final Long id, final RoutineTime routineTime, final RoutineType routineType, final String description) {
+        final DailyRoutineEntity dailyRoutineEntity = getDailyRoutineEntity(id);
+        final DailyRoutine dailyRoutine = dailyRoutineEntity.toDomain();
+
+        dailyRoutine.update(routineTime, routineType, description);
+        dailyRoutineEntity.update(dailyRoutine);
+        
+        return id;
+    }
+
+    private DailyRoutineEntity getDailyRoutineEntity(final Long id) {
+        return dailyRoutineRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("해당하는 ID의 DailyRoutine이 존재하지 않습니다."));
     }
 }
